<resources>
    <string name="app_name">Java</string>
    <string name="list_title">List of aircrafts</string>
    <string name="add_button">Add</string>
    <string name="adding_aircraft">Adding aircraft</string>
    <string name="name">Name</string>
    <string name="model">Model</string>
    <string name="creation_year">Creation year</string>
    <string name="inspection_year">Inspection year</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="editing_aircraft">Editing aircraft</string>
    <string name="description">Description</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="price">Price</string>
    <string name="main">Main</string>
    <string name="list_aircrafts">List aircrafts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewing">Viewing</string>
    <string name="edit">Edit</string>
    <string name="nothing">NOTHING</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="login">Login</string>
</resources>